--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "robofriends",
-  "homepage": "https://rajibkn345.github.io/robofriends",
+  "homepage": "https://rajibkn345.github.io/robo-friends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.1",
     "tachyons": "4.12.0"
   },
   "scripts": {
